# emulation

./: .gitignore  .pylintrc  README.md  main.py  mypy.ini  pyproject.toml  run.sh  tox.ini  variance.ipynb
.github/workflows/: build.yml  documentation.yml  lint.yml
data/ARCADE/: C-feature_1.0_metric_15.0-04022023.csv  C-feature_15.0_metric_15.0-04022023.csv  CH-feature_1_metric_15-03092023.csv  VASCULAR_FUNCTION.csv  arcade_emulation.csv  make_toy_dataset.py  toy_data.csv
data/ARCADE/diff/: C-feature_(15.0-0.0)_metric_15-04032023.csv  C-feature_(8.0-0.0)_metric_15-04032023.csv  CH-feature_(15.0-0.0)_metric_15-04032023.csv  CH-feature_(8.0-0.0)_metric_15-04032023.csv
data/ARCADE/legacy/: C-feature_1_metric_15-03092023.csv  EXACT_HEMODYNAMICS.csv  EXACT_HEMODYNAMICS_C.csv  EXACT_HEMODYNAMICS_CHX.csv  SITE_ARCHITECTURE_METRICS.csv  SITE_ARCHITECTURE_METRICS_C.csv  SITE_ARCHITECTURE_METRICS_CHX.csv  VASCULAR_FUNCTION.csv  VASCULAR_FUNCTION_C.csv  (+2 more)
data/spatial/: C-feature_15_metric_15-03092023.csv  C-feature_1_metric_15-03092023.csv  C-feature_8_metric_15-03092023.csv  CH-feature_15_metric_15-03092023.csv  CH-feature_1_metric_15-03092023.csv  CH-feature_8_metric_15-03092023.csv
docs/: conf.py  index.rst  modules.rst
src/: config.py  main.py
src/conf/: arcade-activity.yaml  arcade-cycles.yaml  arcade-growth.yaml  arcade-symmetry.yaml  arcade.yaml  config.yaml
src/config_utils/: assign_hyperparameters.py  assign_models.py  dataclasses.py
src/permutation/: experiment.py  exporter.py  file_utils.py  loader.py  logger.py  metrics.py  runner.py  stage.py  tracker.py
(+62 files in other folders)
